# r2r_spl

./: README.md  dependencies.repos
.github/workflows/: build_and_test_dev.yaml  build_and_test_humble.yaml
r2r_spl/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
r2r_spl/r2r_spl/: exceptions.py  r2r_spl.py  serialization.py  to_struct.py
r2r_spl/test/: test_r2r_spl.py  test_serialization.py
r2r_spl_2022/: package.xml  setup.cfg  setup.py
r2r_spl_2022/test/: test_r2r_spl.py
r2r_spl_7/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
r2r_spl_7/r2r_spl_7/: r2r_spl.py
r2r_spl_7/test/: test_r2r_spl.py
r2r_spl_8/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
r2r_spl_8/r2r_spl_8/: r2r_spl.py
r2r_spl_8/test/: test_r2r_spl.py
r2r_spl_master/: package.xml  setup.cfg  setup.py
r2r_spl_master/r2r_spl_master/: r2r_spl.py
r2r_spl_master/test/: test_r2r_spl.py
r2r_spl_test_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
r2r_spl_test_interfaces/msg/: ArrayTypes.msg  BasicTypes.msg  MessageTypes.msg  NestedTypes.msg
splsm_7/: CHANGELOG.rst  package.xml
splsm_7_conversion/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
splsm_7_conversion/splsm_7_conversion/: conversion.py  spl_standard_message.py
splsm_7_conversion/test/: test_conversion.py
splsm_8/: CHANGELOG.rst  CMakeLists.txt  package.xml
splsm_8/msg/: SPLSM.msg
splsm_8_conversion/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
splsm_8_conversion/splsm_8_conversion/: conversion.py  spl_standard_message.py
splsm_8_conversion/test/: test_conversion.py
