<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2r_spl</name>
  <version>0.0.0</version>
  <description>Robot-to-Robot Communication in RoboCup Standard Platform League</description>
  <maintainer email="kenjibrameld@gmail.com">vscode</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>python3-construct</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>gc_spl_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-numpy</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>r2r_spl_test_interfaces</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
