<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2r_spl_8</name>
  <version>3.0.1</version>
  <description>Robot-To-Robot communication in RoboCup SPL</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>splsm_8_conversion</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <deprecated>
      Please use r2r_spl. r2r_spl_8 is deprecated as of J-turtle, and will be removed in K-turtle.
    </deprecated>
  </export>
</package>
